fixed a breadcrumb bug
 * fixed a bug that bootstrap breadcrumb looks broken

--- a/static/css/namuvector.css
+++ b/static/css/namuvector.css
@@ -130,3 +130,7 @@ footer {
     float: right;
     cursor: pointer;
 }
+/* fix layout bugs */
+.breadcrumb.link-nav > li {
+    display: inline-block;
+}
